--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   ],
   "require": {
     "php": "^5.5 || ^7.2",
-    "typo3/cms-core": "^6.2 || ^7.6 || ^8,7 || ^9.5 || ^10.4",
+    "typo3/cms-core": "^7.6 || ^8,7 || ^9.5 || ^10.4",
     "jambagecom/div2007": "^1.11",
     "jambagecom/table": "^0.7",
     "jambagecom/tsparser": "^0.2"
