--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "friendsoftypo3/func": "^9.0",
     "jambagecom/addons-em": "^0.2",
     "friendsoftypo3/typo3db-legacy": "^1",
-    "jambagecom/taxajax": "^0.4"
+    "jambagecom/taxajax": "^0.4",
+    "sjbr/static-info-tables": "^6.7,^6.8,^6.9"
   },
   "autoload": {
     "psr-4": {
