--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   ],
   "require": {
     "php": "^7.2",
-    "typo3/cms-core": "^7.6 || ^8.7 || ^9.5 || ^10.4 || ^11.5",
+    "typo3/cms-core": "^9.5 || ^10.4 || ^11.5",
     "jambagecom/div2007": "^1.11",
     "jambagecom/table": "^0.7 || ^0.8",
     "jambagecom/tsparser": "^0.2.5 || ^0.3"
