--- a/Resources/Example/config.yaml
+++ b/Resources/Example/config.yaml
@@ -20,6 +20,12 @@ languages:
     languageId: '0'
 rootPageId: 1
 routeEnhancers:
+  PageTypeSuffix:
+    type: PageType
+    default: /
+    index: ''
+    map:
+      /: 0
   TtProduct:
     type: Plugin
     routePath: '/products/{product}'
@@ -35,18 +41,29 @@ routeEnhancers:
     type: Plugin
     routePath: '/browse_products/{pp}'
     namespace: tt_products
+    requirements:
+      pp: '[a-zA-Z0-9].*'
+    aspects:
+      pp:
+        type: StaticRangeMapper
+        start: '1'
+        end: '100'
   TtProductWithPagination:
     type: Plugin
     routePath: '/products/{product}/browse_products/{pp}'
     namespace: tt_products
     requirements:
-      product: '[a-zA-Z0-9].*'
       pp: '[a-zA-Z0-9].*'
+      product: '[a-zA-Z0-9].*'
     aspects:
       product:
         type: PersistedAliasMapper
         tableName: tt_products
         routeFieldName: slug
+      pp:
+        type: StaticRangeMapper
+        start: '1'
+        end: '100'
   TtProductBackPid:
     type: Plugin
     routePath: '/backPID/{backPID}'
@@ -76,6 +93,28 @@ routeEnhancers:
         type: PersistedAliasMapper
         tableName: tt_products
         routeFieldName: slug
+  TtProductWithPaginationAndBackPid:
+    type: Plugin
+    routePath: '/products/{product}/backPID/{backPID}/browse_products/{pp}'
+    namespace: tt_products
+    requirements:
+      backPID: '[a-zA-Z0-9].*'
+      product: '[a-zA-Z0-9].*'
+      pp: '[a-zA-Z0-9].*'
+    aspects:
+      backPID:
+        type: PersistedPatternMapper
+        tableName: pages
+        routeFieldPattern: '^(?P<title>.+)$'
+        routeFieldResult: '{title}'
+      product:
+        type: PersistedAliasMapper
+        tableName: tt_products
+        routeFieldName: slug
+      pp:
+        type: StaticRangeMapper
+        start: '1'
+        end: '100'
 routes:
   -
     route: robots.txt
