--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
     "php": "^7.4 || ^8.0",
     "typo3/cms-core": "^10.4 || ^11.5",
     "jambagecom/div2007": "^1.14",
-    "jambagecom/table": "^0.7 || ^0.8",
-    "jambagecom/tsparser": "^0.2.5 || ^0.3",
+    "jambagecom/table": "^0.11",
+    "jambagecom/tsparser": "^0.3.0 || ^0.4.0",
     "friendsoftypo3/typo3db-legacy": "^1"
   },
   "suggest": {
