--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "typo3/cms-core": "^10.4 || ^11.5",
     "jambagecom/div2007": "^1.14",
     "jambagecom/table": "^0.11",
-    "jambagecom/tsparser": "^0.3.0 || ^0.4.0",
+    "jambagecom/tsparser": "",
     "friendsoftypo3/typo3db-legacy": "^1"
   },
   "suggest": {
