--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
   ],
   "require": {
     "php": "^7.4 || ^8.0",
-    "typo3/cms-core": "^10.4 || ^11.5",
+    "typo3/cms-core": "^10.4 || ^11.5 || ^12.3",
+    "typo3/cms-filelist": "^10.4 || ^11.5 || ^12.3",
     "jambagecom/div2007": "^1.15",
     "jambagecom/table": "^0.11",
     "jambagecom/tsparser": "^0.9.0",
@@ -34,8 +35,8 @@
   "suggest": {
     "friendsoftypo3/func": "^9.0",
     "jambagecom/addons-em": "^0.2",
-    "jambagecom/taxajax": "^0.4 || ^0.5",
-    "sjbr/static-info-tables": "^6.7 || ^6.8 || ^6.9 || ^11.5"
+    "jambagecom/taxajax": "^0.5",
+    "sjbr/static-info-tables": "^6.7 || ^6.8 || ^6.9 || ^11.5|| ^12"
   },
   "autoload": {
     "psr-4": {
