--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,8 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "php": "^7.4 || ^8.0",
-    "typo3/cms-core": "^10.4 || ^11.5 || ^12.3",
-    "typo3/cms-filelist": "^10.4 || ^11.5 || ^12.3",
+    "typo3/cms-core": "^10.4 || ^11.5",
+    "typo3/cms-filelist": "^10.4 || ^11.5",
     "jambagecom/div2007": "^1.15",
     "jambagecom/table": "^0.11",
     "jambagecom/tsparser": "^0.9.0",
@@ -34,8 +33,9 @@
   },
   "suggest": {
     "friendsoftypo3/func": "^9.0",
-    "jambagecom/addons-em": "^0.2",
+    "jambagecom/addons-em": "^0.6",
     "jambagecom/taxajax": "^0.5",
+    "jambagecom/static-info-tables-taxes": "^0.6",
     "sjbr/static-info-tables": "^6.7 || ^6.8 || ^6.9 || ^11.5|| ^12"
   },
   "autoload": {
