--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "require": {
     "typo3/cms-core": "^10.4 || ^11.5",
     "typo3/cms-filelist": "^10.4 || ^11.5",
-    "jambagecom/div2007": "^1.15",
+    "jambagecom/div2007": "^1.15 || ^2.0",
     "jambagecom/table": "^0.11",
     "jambagecom/tsparser": "^0.9.0",
     "friendsoftypo3/typo3db-legacy": "^1"
@@ -34,7 +34,7 @@
   "suggest": {
     "friendsoftypo3/func": "^9.0",
     "jambagecom/addons-em": "^0.6",
-    "jambagecom/taxajax": "^0.5",
+    "jambagecom/taxajax": "^1.0",
     "jambagecom/static-info-tables-taxes": "^0.6",
     "sjbr/static-info-tables": "^6.7 || ^6.8 || ^6.9 || ^11.5|| ^12"
   },
@@ -64,13 +64,4 @@
       "extension-key": "tt_products"
     }
   },
-  "require-dev": {
-    "friendsofphp/php-cs-fixer": "^3.40"
-  },
-  "config": {
-    "allow-plugins": {
-      "typo3/cms-composer-installers": true,
-      "typo3/class-alias-loader": true
-    }
-  }
 }
