add support for TYPO3 12

--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "typo3/cms-core": "^10.4 || ^11.5",
-    "typo3/cms-filelist": "^10.4 || ^11.5",
-    "jambagecom/div2007": "^1.15 || ^2.0",
+    "typo3/cms-core": "^10.4 || ^11.5 || ^12.4",
+    "typo3/cms-filelist": "^10.4 || ^11.5 || ^12.4",
+    "jambagecom/div2007": "^1.17 || ^2.0",
     "jambagecom/table": "^0.11",
     "jambagecom/tsparser": "^0.9.0",
     "friendsoftypo3/typo3db-legacy": "^1"
